[gd_scene load_steps=9 format=3 uid="uid://tx64gjx52y3"]

[ext_resource type="Script" uid="uid://wd31uttu17sr" path="res://scenes/computer/computer.gd" id="1_srgvo"]
[ext_resource type="Texture2D" uid="uid://cc0shbq15u3n1" path="res://assets/sprites/own/pc_4_0001.png" id="2_srgvo"]
[ext_resource type="Texture2D" uid="uid://b4hyg3tusa4e0" path="res://assets/sprites/light/2d_light.webp" id="4_5o8iy"]
[ext_resource type="PackedScene" uid="uid://djqygmt1j4djo" path="res://scenes/progress bar/progress_bar.tscn" id="4_8d7te"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8d7te"]
size = Vector2(38, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5o8iy"]
size = Vector2(38, 19)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_8d7te"]
light_mode = 1

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_twnhc"]
closed = false
polygon = PackedVector2Array(-31.3958, -13.2863, -1.19687, -13.2038, 21.2847, -13.1423)

[node name="PC" type="Node2D"]
script = ExtResource("1_srgvo")
pc_id = 1
time_for_conclude = 5

[node name="ComputerSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 2)
texture = ExtResource("2_srgvo")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false
position = Vector2(0, 2)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_8d7te")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_5o8iy")

[node name="ProgressBar" parent="." instance=ExtResource("4_8d7te")]
visible = false
material = SubResource("CanvasItemMaterial_8d7te")
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -20.0
offset_top = -31.0
offset_right = 20.0
offset_bottom = -26.0
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(-5.09199, -8.60213)
scale = Vector2(0.109372, 0.117587)
enabled = false
energy = 0.8
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 10.0
texture = ExtResource("4_5o8iy")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
visible = false
position = Vector2(3.56697, 1.06692)
occluder = SubResource("OccluderPolygon2D_twnhc")
sdf_collision = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
